# echoes

./: .gitignore  CLAUDE.md  README.md  TODO.md
.github/workflows/: azure-static-web-apps-polite-pebble-023b85a0f.yml  deploy-backend.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  partidas.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/models/: domain.py  llm_schema.py
backend/app/repositories/: imagen_repo.py  partida_repo.py
backend/app/services/: foundry_client.py  partida_service.py  prompts.py
backend/scripts/: verify_setup.py
backend/tests/: conftest.py  test_api.py  test_partida_service.py
docs/: Definicion del Proyecto.docx  prompts.md  setup_azure.md  setup_deployment.md
frontend/: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  staticwebapp.config.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: acciones.tsx  final-banner.tsx  header.tsx  imagen-modal.tsx  inicio-dialog.tsx  partida-sidebar.tsx  partidas-list.tsx  theme-toggle.tsx  turno-card.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx  input.tsx  loader.tsx  sheet.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/store/: partida-store.ts
scripts/: deploy-backend.ps1
